Fix chosen not showing the placeholder, and update placeholder

--- a/assets/css/chosen.css
+++ b/assets/css/chosen.css
@@ -163,7 +163,7 @@
   border: 0 !important;
   font-family: sans-serif;
   font-size: 100%;
-  height: 15px;
+  height: 25px;
   padding: 5px;
   margin: 1px 0;
   outline: 0;
